application-tls-termination/manifests/traefik-ingress-api.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: platform-api-v3
  namespace: howso
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.local.howso.com`) && PathPrefix(`/api/v3/`)
      kind: Rule
      services:
        - name: platform-api-v3
          port: 8443
          serversTransport: api-v3-backend-transport
    - match: Host(`api.local.howso.com`) && Path(`/openapi.json`)
      kind: Rule
      services:
        - name: platform-api-v3
          port: 8443
          serversTransport: api-v3-backend-transport
  tls:
    secretName: platform-ingress-tls

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: platform-api-v3-response-timeout
  namespace: howso
spec:
  responseTimeout:
    timeoutSeconds: 300

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: platform-api-v3-no-body-size-limit
  namespace: howso
spec:
  contentLimitSize:
    maxSize: 0 # 0 means no limit
