application-tls-termination/manifests/traefik-ingress-pypi.yaml
#apiVersion: traefik.io/v1alpha1
#kind: IngressRouteTCP
#metadata:
#  name: platform-pypi
#  namespace: howso
#spec:
#  entryPoints:
#    - websecure
#  routes:
#    - match: HostSNI(`pypi.local.howso.com`)
#      services:
#        - name: platform-pypi
#          port: 8443
#  tls:
#    passthrough: true

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: platform-pypi
  namespace: howso
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pypi.local.howso.com`)
      kind: Rule
      services:
        - name: platform-pypi
          port: 8443
          scheme: https
          serversTransport: pypi-backend-transport
  tls:
    secretName: platform-ingress-tls
