application-tls-termination/manifests/traefik-ingress-ui.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: platform-ui-v2
  namespace: howso
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.local.howso.com`) || Host(`local.howso.com`)
      kind: Rule
      services:
        - name: platform-ui-v2
          port: 8443
          serversTransport: ui-v2-backend-transport
    - match: Host(`presigned.local.howso.com`) && (PathPrefix(`/platform/jobs/`) || PathPrefix(`/platform/data-resources/`) || PathPrefix(`/platform/trainees/`))
      kind: Rule
      services:
        - name: platform-ui-v2
          port: 8443
          serversTransport: ui-v2-backend-transport
      middlewares:
        - name: platform-ui-v2-redirect
  tls:
    secretName: platform-ingress-tls

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: platform-ui-v2-redirect
  namespace: howso
spec:
  redirectScheme:
    scheme: https
    permanent: true
